# trollstov

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/audio/: Cargo.toml
crates/audio/src/: audio.rs
crates/database/: Cargo.toml
crates/database/src/: audio.rs  database.rs  lib.rs  matcher.rs  track.rs
crates/jukebox/: Cargo.toml
crates/jukebox/src/: device.rs  jukebox.rs  lib.rs  player.rs  queue.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: lib.rs  list.rs  logo.rs  shortcut.rs  text_input.rs  text_segment.rs  utils.rs
lib/: Cargo.toml
lib/src/: audio.rs  database.rs  jukebox.rs  lib.rs  mpris.rs  queue.rs  utils.rs
src/: app.rs  audio.rs  database.rs  editor.rs  events.rs  jukebox.rs  lib.rs  main.rs  pages.rs  terminal.rs  utils.rs  widgets.rs
src/jukebox/: audio.rs  database.rs  queue.rs
src/pages/: logs.rs  playing.rs  queue.rs  search.rs  tracks.rs
src/widgets/: shortcut.rs  text_input.rs  text_segment.rs
trollstov/: Cargo.toml
trollstov/src/: app.rs  events.rs  main.rs  pages.rs  settings.rs  symbols.rs  terminal.rs
trollstov/src/pages/: logs.rs  playing.rs  search.rs  settings.rs  tracks.rs
tui/: Cargo.toml
tui/src/: app.rs  colors.rs  events.rs  main.rs  pages.rs  settings.rs  symbols.rs  utils.rs  widgets.rs
tui/src/pages/: logs.rs  playing.rs  search.rs  settings.rs  tracks.rs
tui/src/widgets/: list.rs  logo.rs  shortcut.rs  text_input.rs  text_segment.rs  utils.rs
