[workspace]
resolver = "3"
members = ["lib", "tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
jukebox = { path = "lib/" }
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
