[workspace]
resolver = "3"
members = ["crates/*", "trollstov"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
homepage = "https://github.com/hikikones/trollstov"
repository = "https://github.com/hikikones/trollstov"
license = "MIT"

[workspace.dependencies]
audio = { path = "crates/audio", default-features = false }
clap = { version = "4.6", default-features = false, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "usage"
] }
clap-cargo = { version = "0.18", default-features = false }
constcat = { version = "0.6", default-features = false }
database = { path = "crates/database", default-features = false }
directories = { version = "6.0", default-features = false }
fastrand = { version = "2.3", default-features = false }
ignore = { version = "0.4", default-features = false, features = ["simd-accel"] }
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "rayon",
] }
indexmap = { version = "2.13", default-features = false, features = ["std"] }
itoa = { version = "1.0", default-features = false }
jukebox = { path = "crates/jukebox", default-features = false }
lofty = { version = "0.23", default-features = false, features = [
  "id3v2_compression_support"
] }
nucleo-matcher = { version = "0.3", default-features = false, features = [
  "unicode-casefold",
  "unicode-normalization",
  "unicode-segmentation"
] }
ratatui = { version = "0.30", default-features = false, features = [
  "crossterm",
  "serde"
] }
ratatui-image = { version = "10.0", default-features = false, features = [
  "crossterm"
] }
rodio = { git = "https://github.com/RustAudio/rodio.git", rev = "4aa22e85e5ad5565c45dfdda95051158eb6b56c3", default-features = false, features = [
  "flac",
  "mp3",
  "playback",
  "vorbis"
] }
seahash = { version = "4.1", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "std"
] }
serde_repr = { version = "0.1", default-features = false }
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
terminal-colorsaurus = { version = "1.0", default-features = false }
toml = { version = "1.0", default-features = false, features = [
  "display",
  "parse",
  "serde",
  "std"
] }
unicode-segmentation = { version = "1.12", default-features = false }
unicode-width = { version = "0.2", default-features = false }
utils = { path = "crates/utils", default-features = false }
walkdir = { version = "2.5", default-features = false }
widgets = { path = "crates/widgets", default-features = false }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
