[package]
name = "jukebox"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
fastrand = "2.3"
ignore = { version = "0.4", features = ["simd-accel"] }
indexmap = "2.13"
itoa = "1.0"
lofty = "0.23"
nucleo-matcher = "0.3"
rodio = "0.21"
souvlaki = "0.8"
walkdir = "2.5"
