[package]
name = "jukebox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastrand = "2.3"
ignore = { version = "0.4", features = ["simd-accel"] }
indexmap = "2.13"
itoa = "1.0"
lofty = "0.23"
nucleo-matcher = "0.3"
rodio = "0.21"
serde = { workspace = true, optional = true }
serde_repr = { version = "0.1", optional = true }
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
walkdir = "2.5"

[features]
default = []
serde = ["dep:serde", "dep:serde_repr"]
