[package]
name = "trollstov"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A music player for the terminal where your files and their metadata are all you need."
license.workspace = true

[dependencies]
audio = { workspace = true }
clap = { workspace = true }
clap-cargo = { workspace = true }
constcat = { workspace = true }
database = { workspace = true }
directories = { workspace = true }
image = { workspace = true }
jukebox = { workspace = true }
ratatui = { workspace = true }
ratatui-image = { workspace = true }
seahash = { workspace = true }
serde = { workspace = true }
souvlaki = { workspace = true }
terminal-colorsaurus = { workspace = true }
toml = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
utils = { workspace = true }
widgets = { workspace = true }

[features]
default = []
opus = ["jukebox/opus"]
