[package]
name = "trollstov"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A music player for the terminal where your files and their metadata are all you need."
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = [
  "cli",
  "music",
  "music-player",
  "ratatui",
  "terminal",
  "terminal-app",
  "tui"
]
categories = ["audio", "command-line-utilities", "multimedia"]

[dependencies]
clap = { workspace = true }
clap-cargo = { workspace = true }
constcat = { workspace = true }
database = { workspace = true }
directories = { workspace = true }
image = { workspace = true }
jukebox = { workspace = true }
ratatui = { workspace = true }
ratatui-image = { workspace = true }
seahash = { workspace = true }
serde = { workspace = true }
souvlaki = { workspace = true }
terminal-colorsaurus = { workspace = true }
toml = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
utils = { workspace = true }
widgets = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging"
]

[features]
default = []
opus = ["database/opus", "jukebox/opus"]
