[package]
name = "jukebox-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Rename binary
[[bin]]
name = "jukebox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
jukebox = { path = "../lib" }
ratatui = "0.30"
ratatui-image = { version = "10.0", default-features = false, features = [
  "crossterm"
] }
seahash = "4.1"
terminal-colorsaurus = "1.0"
unicode-segmentation = "1.12"
unicode-width = "0.2"
