[package]
name = "trollstov"
version = "0.1.0"
edition.workspace = true
description = "A music player for the terminal where your music is the database."
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-cargo = { version = "0.18", default-features = false }
image = "0.25"
jukebox = { path = "../lib" }
ratatui = "0.30"
ratatui-image = { version = "10.0", default-features = false, features = [
  "crossterm"
] }
seahash = "4.1"
terminal-colorsaurus = "1.0"
unicode-segmentation = "1.12"
unicode-width = "0.2"
