[package]
name = "trollstov"
version.workspace = true
edition.workspace = true
description = "A music player for the terminal where your files and their metadata are all you need."
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-cargo = { version = "0.18", default-features = false }
directories = "6.0"
image = "0.25"
jukebox = { workspace = true, features = ["serde"] }
ratatui = { version = "0.30", features = ["serde"] }
ratatui-image = { version = "10.0", default-features = false, features = [
  "crossterm"
] }
seahash = "4.1"
serde = { workspace = true }
terminal-colorsaurus = "1.0"
toml = "1.0"
unicode-segmentation = "1.12"
unicode-width = "0.2"
