[package]
name = "database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
audio = { workspace = true }
fastrand = { workspace = true }
ignore = { workspace = true }
indexmap = { workspace = true }
nucleo-matcher = { workspace = true }
utils = { workspace = true }
walkdir = { workspace = true }
