[package]
name = "widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ratatui = { workspace = true }
seahash = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
